--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,6 +9,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
+    <script
+type="text/javascript"
+src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+></script>
+<script type="text/javascript">
+(function () {
+  emailjs.init('Qefwz8LeMgFGv424_');
+})();
+</script>
   </body>
 </html>
