--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,7 +9,17 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3JZ05FZJ42"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3JZ05FZJ42');
+</script>
     <script
+    
 type="text/javascript"
 src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
 ></script>
